[gd_scene load_steps=6 format=3 uid="uid://cpj5rtpiq5d5i"]

[ext_resource type="Script" path="res://Main/Data/Structure/shelving_class.gd" id="1_gkjpa"]
[ext_resource type="PackedScene" uid="uid://ciyfid66c5ied" path="res://Main/Data/package.tscn" id="2_qd8kw"]
[ext_resource type="PackedScene" uid="uid://dp1xpv3nykfmd" path="res://Component/interactable_object_component.tscn" id="3_qbkhq"]
[ext_resource type="Script" path="res://Component/orientation_component.gd" id="4_r0u74"]
[ext_resource type="Texture2D" uid="uid://dx3dgt6ub6k0t" path="res://Asset/32x32white.png" id="5_djiws"]

[node name="Shelf" type="StaticBody2D" node_paths=PackedStringArray("interaction_marker") groups=["NavigationBlock"]]
y_sort_enabled = true
texture_filter = 1
collision_layer = 64
collision_mask = 0
script = ExtResource("1_gkjpa")
package_scene = ExtResource("2_qd8kw")
interaction_marker = NodePath("InteractionMarker")

[node name="SpriteHandler" type="Node2D" parent="."]

[node name="ChangeColorTimer" type="Timer" parent="SpriteHandler"]
wait_time = 0.1
one_shot = true

[node name="InteractionObjectComponent" parent="." node_paths=PackedStringArray("main_object") groups=["Stand"] instance=ExtResource("3_qbkhq")]
position = Vector2(0, -16)
collision_layer = 64
collision_mask = 0
monitoring = false
main_object = NodePath("..")

[node name="Frontal" type="CollisionShape2D" parent="InteractionObjectComponent" groups=["orientation_collision"]]
debug_color = Color(0.27451, 1, 0.501961, 0.419608)

[node name="Side" type="CollisionShape2D" parent="InteractionObjectComponent" groups=["orientation_collision"]]
debug_color = Color(0.27451, 1, 0.501961, 0.419608)

[node name="OrientationComponent" type="Node2D" parent="." node_paths=PackedStringArray("interaction_marker", "rotation_node_list")]
script = ExtResource("4_r0u74")
interaction_marker = NodePath("../InteractionMarker")
rotation_node_list = [NodePath(".."), NodePath("../InteractionObjectComponent")]

[node name="InteractionMarker" type="Marker2D" parent="."]
position = Vector2(0, 16)

[node name="Sprite2D" type="Sprite2D" parent="InteractionMarker"]
modulate = Color(1, 1, 1, 0.501961)
scale = Vector2(0.1, 0.1)
texture = ExtResource("5_djiws")

[node name="Frontal" type="CollisionShape2D" parent="." groups=["orientation_collision"]]

[node name="Side" type="CollisionShape2D" parent="." groups=["orientation_collision"]]
